_custom/css/style.css
/* ... */
#VideoPlayer .mainContainer:not([data-edit-mode="overlays"]):not([data-edit-mode="codesnippets"]):not([data-edit-mode="annotations"]) .playButton.playerControl {
  bottom: 21px;
  left: 20px;  
  background: url('../../_data/resources/1_1556104792_icon-play.svg') no-repeat center center;
  font-size: 0;
}

#VideoPlayer .mainContainer:not([data-edit-mode="overlays"]):not([data-edit-mode="codesnippets"]):not([data-edit-mode="annotations"]) .playButton.playerControl span {
  display: none;
}

#VideoPlayer .mainContainer:not([data-edit-mode="overlays"]):not([data-edit-mode="codesnippets"]):not([data-edit-mode="annotations"]) .playButton.playerControl.playing {
  background: url('../../_data/resources/1_1556104813_icon-pause.svg') no-repeat center center;
}

#VideoPlayer .mainContainer:not([data-edit-mode="overlays"]):not([data-edit-mode="codesnippets"]):not([data-edit-mode="annotations"]) .timeDisplay.playerControl {
  bottom: 11px;
  right: 5px;
}

/* ==========================================================================
ABOUT / CREDITS / IMPRINT
========================================================================== */


#fthyperInfo {
  background: #fec570;
  color: #111;
  z-index: 4;
  opacity: 0;
  visibility: hidden;
  
  -webkit-transition: all 200ms ease-in-out;
  -moz-transition: all 200ms ease-in-out;
  -ms-transition: all 200ms ease-in-out;
  -o-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

#fthyperInfo.is-open {
  opacity: 1;
  visibility: visible;
}

#fthyperInfo .ftLogo {
  color: #111;
}

#fthyperInfo .ftLayerContent {
  transition-property: none;
  transition-duration: 0;
  transform-origin: none;
  transform: none;
  overflow-y: scroll;
}

#fthyperInfo .section-footer {
  display: block;
  clear: both;
  padding-top: 1.5vw;
  max-width: 700px; 
}

#fthyperInfo h6 {
  border-bottom: 1px solid #fff;
  display: inline-block;
  margin: 1.5em 0 .5em;
  font-weight: 900;
}

.ftCloseInfo {
  position: fixed;
  top: 30px;
  right: 30px;
  color: #fff;
  font-size: 1.25em;
  cursor: pointer;
  z-index: 10;
}

.divider {
    width: 100%;
    padding: 10px 0;
}

/* Navigation */

#fthyperInfo .ftInfoNavigation {
  position: fixed;
  background: #fff;
  width: 20%;
  top: 0;
  left: 0;
  bottom: 0;
}

#fthyperInfo .ftInfoNavigation nav ul {
  position: absolute;
  left: 30px;  
  top: 50%;
  -moz-transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -o-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

#fthyperInfo .ftInfoNavigation li {
  display: block;
  position: relative;
  font-family: 'Rubik', helvetica, sans-serif;
  font-weight: 600;
  text-transform: uppercase;
  margin: 2.5vh 0;
}

#fthyperInfo .ftInfoNavigation li a {
  cursor: pointer;
}

#fthyperInfo .ftInfoNavigation li a:before {
 opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  -moz-transition: opacity 200ms ease-in-out;
  -ms-transition: opacity 200ms ease-in-out;
  -o-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
}

#fthyperInfo .ftInfoNavigation li a:hover:before,
#fthyperInfo .ftInfoNavigation li .is-active:before {
 opacity: 1;
}

/* content */

#fthyperInfo .ftInfoContainer {
  margin-left: 20%;
} 

.ftInfoSection {
  position: relative;
  height: 100vh;
  line-height: 1.45em;
}

.ftInfoSection.vertical-aligned {
  display: flex;
  align-items: center;
  justify-content: center;
}

.ftInfoSection.padding-top {
  padding-top: 10vh;
}

.ftInfoContent {
  padding: 0 10%;
  width: 100%;
}

.ftInfoContent h5 {
  font-family: 'Rubik', helvetica, sans-serif;
  font-weight: 600;
  
  line-height: 1em;
}

.ftInfoContent p {
  font-size: .85em; 
  line-height: 1.45em;
  margin: 1em 0;
}

/* Next btn */

.ftNextSection {
  position: absolute;
  left: 10%;
  bottom: 30px;
  font-size: 1.25em;
  color: #fff;
}

.ftNextSection:hover {
  opacity: .75;
}

/* About */

#ueber-uns .ftHero {
  max-width: 700px;
  font-size: 1.15em;
  line-height: 1.45em;
}

/* Team */

#team .ftTeam-member {
  float: left;
  width: 50%;
  font-size: .85em;
  line-height: 1.25em;
  margin: 2.5vw 0;
}

#team .ftTeam-member--portrait {
  float: left;
  width: 80px;
  height: 80px;
  border-radius: 100%;
  overflow: hidden; 
  margin-right: 15px;
}

#team .ftTeam-member--portrait img {
  width: 100%;
  height: auto;
}

#team .ftTeam-member--details {
  float: left;
  margin-top: 10px;
}

#team .ftTeam-member h3 {
  font-family: 'Rubik', helvetica, sans-serif;
  font-weight: 600;
  font-size: .85em;
  text-transform: uppercase;
  
}

#team .ftTeam-member h4 {
  font-weight: 700;
  
}

/* Partners */

#abspann .parterns-list {
  margin-top: 0;
}

#abspann .partners--row,
#abspann .partners--row:last-child {
  border: none !important;
}

#abspann li {
  float: left;
  width: 20%;
  position: relative;
}


#abspann li:after {
  content: "";
  display: block;
  padding-bottom: 70%;
}

#abspann .partner-logo {
  position: absolute;
  width: 70%;
  height: 70%;
  top: 15%;
  left: 15%;
  display: flex;
  align-items: center;
  justify-content: center;
}

#abspann .partner-logo img {
  max-width: 100%;
  height: auto;
}

/* Resourcen */

#resourcen {
  height: auto;
}

#resourcen b {
  font-weight: 900;
}

#resourcen a {
  border-bottom: 1px solid;
}

.ftInfoGithub {
  margin-top: 5vh; 
}

#resourcen .ftInfoGithub .ftLogoGithub {
  border-bottom: none;
}

#resourcen .ftInfoGithub a {
  color: #fff;
  opacity: .75; 
}

.ftInfoGithub {
  margin-top: 5vh; 
}

.ftInfoGithub a {
  color: #fff;
  opacity: .75;
}

.ftInfoGithub a:hover {
  opacity: .75;
}

/* Imprint */

#impressum .ftImpressum-intro {
  font-family: 'Rubik', helvetica, sans-serif;
  font-weight: 600;
  font-size: 1.15em;
}

/* Datenschutz */

#datenschutz p:last-of-type {
  margin-bottom: 10vh;
}
/* ... */

